upgrade reference Rhino version to today's (05.05.2011) CVS head
git-svn-id: svn://svn.code.sf.net/p/htmlunit/code/trunk@6395 5f5364db-9458-4db8-a492-e30667be6df6